successful account creation and login messages (as appropriate)

--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,8 @@ body {
 .section.active{
     display: block;
 }
+.modal{
+    color: aliceblue;
+    font-family: 'Garamond', serif;
+    height: calc(100vh - 100px);
+}
