amended password strength checking function, added a progress bar in add account form, added method to display the strength of the password in the progress bar, addAccount() now retreives the date too.

--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,13 @@ body {
 
 .section.active{
     display: block;
-}
-.modal{
     color: aliceblue;
     font-family: 'Garamond', serif;
     height: calc(100vh - 100px);
+}
+
+.text-success-center {
+    text-align: center;
+    color: limegreen;
+    font-weight: bold;
 }
