--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,35 @@ body {
     color: crimson;
     font-weight: bold;
 }
+
+.editable-image-container{
+    position: relative;
+    display: inline-block;
+}
+.editable-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border-color: #222222;
+    object-fit: cover;
+    display: block;
+}
+
+.edit-icon{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: white;
+    border-radius: 50%;
+    padding: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+.edit-icon:hover {
+    background: #eee;
+}
+
+input[type="file"] {
+    display: none;
+}
